Fix #9148 and probably #9128.

uninit_timers() needs to wait for the timer thread to exit before
deleting the timer mutex.